src/ui/EpisodesList/EpisodeItem.module.css
.container {
  display: flex;
  align-items: center;
  flex-direction: row;
  padding: 0 32px;
  font-size: var(--dimen-font-regular);
  height: 84px;
}

.image {
  height: 84px;
  width: 84px;
}

.title {
  flex: 1;
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

.info {
  display: flex;
  color: var(--color-sub-title);
  flex-direction: column;
  align-items: center;
  margin: 0 16px;
}

.info span {
  margin: 2px;
}

.container button {
  width: 80px;
}

